--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
+{% block content %}
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
-</body>
-</html>
+{% endblock %}
