added some basic html

--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h2>The best music gear north of Övik</h2>
+<p>Please give us money! Josef spent all our capital on a 7-string bass.</p>
+<a href="article.html">GUMA DRIVE 6.9</a>
 {% endblock %}
