--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -5,7 +5,7 @@
 <p>Please give us money! Josef spent all our capital on a 7-string bass.</p>
 
 {% for product in args.products%}
-	<p><a href="article/000001">{{product.name}}</a></p>
+	<p><a href="article/{{product.id}}">{{product.name}}</a></p>
 {% endfor %}
 
 {% endblock %}
