--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+	<link rel="stylesheet type="text/css" href="styles.css">
+	<title>Got schlong?</title>
 </head>
 <body>
 
