more html+bootstrap

--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -7,7 +7,7 @@
 <h5>Please give us money! Josef spent all our capital on a 7-string bass...</h5>
 
 {% for product in args.products%}
-	<p><a href="article/{{product.id}}">{{product.name}}</a></p>
+	<p><a href="categories.html">Categories</a></p>
 {% endfor %}
 
 {% endblock %}
