Added some stuff to the html

--- a/code/templates/product.html
+++ b/code/templates/product.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <h3>{{args.product.name}}</h3>
-<p>Sue me</p>
+<p>{{args.product.description}}</p>
+<hr>
+<h2>{{args.product.price}} kr</h2>
 
 {% endblock %}
