--- a/code/templates/manageProduct.html
+++ b/code/templates/manageProduct.html
@@ -17,7 +17,9 @@
 		{% endfor %}
 	</select>
 	<hr>
-	<button type="submit">Update</button>
+	<button type="submit" name="button" value="delete" class="btn-warning d-inline-block float-right">Delete</button>
+	<button type="submit" name="button" value="submit" class="btn-primary d-inline-block float-right">Update</button>
+
 </form>
 {% endif %}
 
