--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -18,6 +18,38 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div>
+		<a class="navbar-brand" href="/">Musikdong</a>
+		<p class="font-weight-light">How long is your musikschlong?</p>
+	</div>
+
+	<div class="float-right">
+		{% if args.user != None %}
+		<p class="d-inline-block m-2">Welcome {{args.user.alias}}</p>
+		<a href="/logout" class="b-3">
+			<button class="btn btn-primary d-inline-block m-2">Logout</button>
+		</a>
+		{% if args.user.clearance <= 1 %}
+		<a href="/manager" class="b-3 m-2 d-inline-block">
+			<button class="btn btn-primary" >Manager</button>
+		</a>
+		{% endif %}
+		<a href="/cart" class="b-3">
+			<button class="btn btn-primary d-inline-block m-2">Cart</button>
+		</a>
+		{% else %}
+		<a href="/login" class="b-3 d-lg-inline-block">
+			<button class="btn btn-primary d-inline-block m-2" >Login</button>
+		</a>
+		<a href="/signup" class="b-3 d-lg-inline-block">
+			<button class="btn btn-primary d-inline-block m-2" >Sign up</button>
+		</a>
+		{% endif %}
+	</div>
+</nav>
+
+<!-- 
 <div class="row">
 	<div class="col-md-2"></div>
 	<div class="col-md-8 text-center"><a href="/" class="text-reset"><h1>Musikdong - How long is your musikschlong?</h1></a></div>
@@ -42,7 +74,7 @@
 		</a>
 		{% endif %}
 	</div>
-</div>
+</div> -->
 
 <div class="container">
 
