--- a/code/templates/manageProduct.html
+++ b/code/templates/manageProduct.html
@@ -17,8 +17,8 @@
 		{% endfor %}
 	</select>
 	<hr>
-	<button type="submit" name="button" value="delete" class="btn-warning d-inline-block float-right">Delete</button>
-	<button type="submit" name="button" value="submit" class="btn-primary d-inline-block float-right">Update</button>
+	<button type="submit" name="button" value="submit" class="btn btn-primary d-inline-block m-2">Update</button>
+	<button type="submit" name="button" value="delete" class="btn btn-warning d-inline-block m-2">Delete</button>
 
 </form>
 {% endif %}
