--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -19,12 +19,12 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<div>
+	<div class="d-inline-block">
 		<a class="navbar-brand" href="/">Musikdong</a>
 		<p class="font-weight-light">How long is your musikschlong?</p>
 	</div>
 
-	<div class="float-right">
+	<div class="d-inline-block float-right">
 		{% if args.user != None %}
 		<p class="d-inline-block m-2">Welcome {{args.user.alias}}</p>
 		<a href="/logout" class="b-3">
@@ -48,33 +48,6 @@
 		{% endif %}
 	</div>
 </nav>
-
-<!-- 
-<div class="row">
-	<div class="col-md-2"></div>
-	<div class="col-md-8 text-center"><a href="/" class="text-reset"><h1>Musikdong - How long is your musikschlong?</h1></a></div>
-
-	<div class="col-md-2 float-right">
-		{% if args.user != None %}
-		{% if args.user.clearance <= 1 %}
-		<a href="/manager" class="b-3">
-			<button class="btn btn-primary d-inline-block float-right" >Manager</button>
-		</a>
-		{% endif %}
-		<a href="/logout" class="b-3">
-			<button class="btn btn-primary d-inline-block float-right" >Logout</button>
-		</a>
-		<p class="d-inline-block p-3 float-right">{{args.user.alias}}</p>
-		{% else %}
-		<a href="/login" class="b-3">
-			<button class="btn btn-primary d-inline-block float-right" >Login</button>
-		</a>
-		<a href="/signup" class="b-3">
-			<button class="btn btn-primary d-inline-block float-right" >Sign up</button>
-		</a>
-		{% endif %}
-	</div>
-</div> -->
 
 <div class="container">
 
