--- a/code/templates/manager.html
+++ b/code/templates/manager.html
@@ -4,6 +4,20 @@
 <h2>Manager stuff</h2>
 
 {% if args.user != None and args.user.clearance <= 1 %}
+<h3>Orders</h3>
+<div class="box p-3">
+	{% for order in args.orders %}
+	<a href="manageOrder/{{order.id}}" class="d-inline-block mx-2">
+		<h4>{{order.id}} - {{order.username}}</h4>
+	</a>
+	<div class="float-right">
+		{% if order.payed %}<p class="d-inline-block mx-2">Payed</p>{% endif %}
+		{% if order.processed %}<p class="d-inline-block mx-2">Processed</p>{% endif %}
+	</div>
+	<hr>
+	{% endfor %}
+</div>
+
 <h3>Users</h3>
 <div class="box p-3">
 	{% for currentUser in args.users %}
@@ -11,17 +25,24 @@
 	<hr>
 	{% endfor %}
 </div>
-<h3>Products</h3>
+
+<h3>Categories</h3>
+<a href="{{ url_for('addCategory') }}"><button class="btn btn-primary m-2">Add</button></a>
 <div class="box p-3">
-	{% for product in args.products %}
-	<a href="manageProduct/{{product.id}}"><h4>{{product.name}}</h4></a>
+	{% for category in args.categories %}
+	<a href="manageCategory/{{category}}" class="d-inline-block mx-2">
+		<h4>{{category}}</h4>
+	</a>
 	<hr>
 	{% endfor %}
 </div>
-<h3>Orders</h3>
+
+
+<h3>Products</h3>
+<a href="{{ url_for('addProduct') }}"><button class="btn btn-primary m-2">Add</button></a>
 <div class="box p-3">
-	{% for order in args.orders %}
-	<a href="manageOrder/{{order.id}}"><h4>{{order.id}} - {{order.username}}</h4></a>
+	{% for product in args.products %}
+	<a href="manageProduct/{{product.id}}"><h4>{{product.name}}</h4></a>
 	<hr>
 	{% endfor %}
 </div>
