--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -5,7 +5,7 @@
 <h5>Please give us money! Josef spent all our capital on a 7-string bass...</h5>
 
 {% for category in args.categories%}
-	<p><a href="category/{{category}}">{{category}}</a></p>
+	<div><a href="category/{{category}}"><button class="btn btn-light m-2">{{category}}</button></a></div>
 {% endfor %}
 
 {% endblock %}
