--- a/code/templates/manageOrder.html
+++ b/code/templates/manageOrder.html
@@ -53,7 +53,7 @@
 		<p class="d-md-inline-block">{{instance.amount}}</p>
 		<input type="submit" name="submit" value="-" class="btn m-2 d-md-inline-block">
 	</form>
-	<p class="float-right m-3">{{instance.product.price * instance.amount}} kr</p>
+	<p class="float-right m-3">{{instance.price * instance.amount}} kr</p>
 	<hr>
 	{% endfor %}
 	<h4 class="h4 m-2 d-inline-block">Total</h4>
