--- a/code/templates/manageUser.html
+++ b/code/templates/manageUser.html
@@ -11,7 +11,8 @@
 	Password: <input type="text" name="password">
 	<br>
 	Clearance: <input type="text" name="clearance" value="{{args.userToManage.clearance}}" {% if args.user.clearance > 0 %} disabled {% endif %}><br>
-	<button type="submit" class="btn btn-primary mt-3">Update</button>
+	<button type="submit" name="submit" class="btn btn-primary mt-3" value="update">Update</button>
+	<button type="submit" name="submit" class="btn btn-warning mt-3" value="delete">Delete</button>
 </form>
 <hr>
 <h2>Cart</h2>
