--- a/code/templates/base.html
+++ b/code/templates/base.html
@@ -25,28 +25,37 @@
 	</div>
 
 	<div class="d-inline-block float-right">
-		{% if args.user != None %}
-		<p class="d-inline-block m-2">Welcome {{args.user.alias}}</p>
-		<a href="/logout" class="b-3">
-			<button class="btn btn-primary d-inline-block m-2">Logout</button>
-		</a>
-		{% if args.user.clearance <= 1 %}
-		<a href="/manager" class="b-3 m-2 d-inline-block">
-			<button class="btn btn-primary" >Manager</button>
-		</a>
-		{% endif %}
-		<a href="/cart" class="b-3">
-			<button class="btn btn-primary d-inline-block m-2">Cart</button>
-		</a>
-		{% else %}
-		<a href="/login" class="b-3 d-lg-inline-block">
-			<button class="btn btn-primary d-inline-block m-2" >Login</button>
-		</a>
-		<a href="/signup" class="b-3 d-lg-inline-block">
-			<button class="btn btn-primary d-inline-block m-2" >Sign up</button>
-		</a>
-		{% endif %}
+		<div class="d-inline-block">
+			<form method="get" action="/search">
+				 <input name="searchString" type="text" placeholder="Search..">
+				 <button type="submit" class="btn">Search</button>
+			</form>
+		</div>
+		<div class="d-inline-block">
+			{% if args.user != None %}
+			<p class="d-inline-block m-2">Welcome {{args.user.alias}}</p>
+			<a href="/logout" class="b-3">
+				<button class="btn btn-primary d-inline-block m-2">Logout</button>
+			</a>
+			{% if args.user.clearance <= 1 %}
+			<a href="/manager" class="b-3 m-2 d-inline-block">
+				<button class="btn btn-primary" >Manager</button>
+			</a>
+			{% endif %}
+			<a href="/cart" class="b-3">
+				<button class="btn btn-primary d-inline-block m-2">Cart</button>
+			</a>
+			{% else %}
+			<a href="/login" class="b-3 d-lg-inline-block">
+				<button class="btn btn-primary d-inline-block m-2" >Login</button>
+			</a>
+			<a href="/signup" class="b-3 d-lg-inline-block">
+				<button class="btn btn-primary d-inline-block m-2" >Sign up</button>
+			</a>
+			{% endif %}
+		</div>
 	</div>
+
 </nav>
 
 <div class="container">
